# resume-generator

./: .gitignore  LICENSE.txt  dev.sh  package-lock.json  package.json  pyproject.toml  resume-fr.json  resume_generator.py  template-simple.docx
resume_generator/: __main__.py  convert.py
resumejson/: resume-en.json  resume-fr.json
scripts/: spellcheck.py  validate.js
templates/: .~lock.template-simple.docx#  simple.docx  template-simple-js.docx
