[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
#packages = ["baseclasses", "elements"]
py-modules = ["resume_generator"]

[project]
name = "resume-generator"
version = "2025.12.29"
dependencies = [
  "docxtpl"
]
#requires-python = ">=3.8"
authors = [
  {name = "Thomas Leclercq", email = "thomasle@mailbox.org"},
]
maintainers = [
  {name = "Thomas Leclercq", email = "thomasle@mailbox.org"},
]
description = "Generate my resumes."
#readme = "README.rst"
license = "MIT"
license-files = ["LICEN[CS]E.*"]
#keywords = ["egg", "bacon", "sausage", "tomatoes", "Lobster Thermidor"]
classifiers = [
  #"Development Status :: 4 - Beta",
  #"Programming Language :: Python"
]

[project.optional-dependencies]
#gui = ["PyQt5"]
#cli = [
  #"rich",
  #"click",
#]

[project.urls]
#Homepage = "https://example.com"
#Documentation = "https://readthedocs.org"
#Repository = "https://github.com/me/spam.git"
#"Bug Tracker" = "https://github.com/me/spam/issues"
#Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

[project.scripts]
resume-generator = "resume_generator:main"

